testsuite/poke.pkl/struct-types-diag-7.pk
/* { dg-do compile } */

/* Struct elements can't have duplicated names.
   Version with declarations.  */

deftype Packet = struct
 {
   string foo;
   long bar;
   defvar foo = 10;  /* { dg-error "" } */
 };
